--- a/fruit-basket.css
+++ b/fruit-basket.css
@@ -6,60 +6,38 @@
     color: #777;
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
-}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 
-.nav ul {
-    margin: 0;
-}
-
-.nav li {
-    display: inline;
-}
-
-.nav a {
-    display: inline-block;
-    padding: .5em;
-    color: white;
-    text-decoration: none;
-}
-
-.main-nav {
-    text-align: center;
-    font-size: 1.1em;
-    font-weight: lighter;
-    border-bottom: 1px solid rgba(255, 255, 255, .3)
-}
-
-.main-nav li {
-    padding: 0 5%;
-}
-
-.nav a:hover {
-    background-color: rgba(255, 255, 255, .3)
+body, html {
+  height: 100%;
+  color: #777;
+  line-height: 1.8;
 }
 
 .main-header {
-    background-color: rgba(0, 0, 0, .6);
-    background-image: url("Images/Header Background.jpg");
+    background-color: rgba(0, 0, 0, .2);
+    background-image: url("./images/header-image.jpeg");
     background-blend-mode: multiply;
     background-size: cover;
     padding-bottom: 30px;
+    height: 30em;
 }
 
-.band-name {
-    text-align: center;
-    margin: 0;
-    font-size: 4em;
-    font-weight: normal;
+.header-text {
+    font-size: 140%;
+    padding:12px;
     color: white;
+    background-color:#000;
+    letter-spacing: 10px;
+    text-align:center;
+    opacity:0.75;
 }
 
-.band-name-large {
-    font-size: 8em;
+.display-middle{
+    position:absolute;
+    top:35%;left:50%;
+    transform:translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%)
 }
 
 .content-section {
@@ -67,131 +45,63 @@ html, body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 1.5em;
 }
+
 .section-header {
-    font-family: "Metal Mania";
-    font-weight: normal;
-    color: #333;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 140%;
+    padding:12px;
+    color:#000;
+    letter-spacing: 5px;
 }
 
-.about-band-image {
-    float: left;
-    height: 200px;
-    width: 200px;
-    margin: 15px;
-    border-radius: 50%;
-}
-
-.main-footer {
-    background-color: #56CCF2;
+/*BUTTONS*/
+.button {
+    background-color: black;
+    opacity: 0.75;
+    border: none;
+    border-radius: 0.5em;
     color: white;
-    padding: .25em 0;
-}
-
-.main-footer-container {
-    display: flex;
-    align-items: center;
-}
-
-.main-footer-container ul {
-    flex-grow: 1;
-    text-align: end;
-}
-
-.footer-nav li {
-    padding: 0 .5em;
-}
-
-.footer-nav img {
-    width: 30px;
-    height: 30px;
-}
-
-.btn {
+    padding: 16px 32px;
     text-align: center;
-    vertical-align: middle;
-    padding: .67em .67em;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
     cursor: pointer;
 }
+  
+.button:hover {opacity: 1}
 
-.btn-header {
-    margin: .5em 15% 2em 15%;
+.btn-danger {
     color: white;
-    border: 2px solid #2D9CDB;
-    background-color: rgba(255, 255, 255, .1);
-    border-radius: 0;
-    font-size: 1.5em;
-    font-weight: lighter;
-    padding-left: 2em;
-    padding-right: 2em;
-}
-
-.btn-header:hover {
-    background-color: rgba(255, 255, 255, .3);
-}
-
-.btn-play {
-    display: block;
-    margin: 0 auto;
-    color: #2D9CDB;
-    font-size: 4em;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    padding: 0;
-    text-align: center;
-}
-
-.btn-primary {
-    color: white;
-    background-color: #56CCF2;
+    background-color: #EB5757;
     border: none;
     border-radius: .3em;
     font-weight: bold;
 }
 
-.btn-primary:hover {
-    background-color: #2D9CDB;
+.btn-danger:hover {
+    background-color: #CC4C4C;
 }
 
-.tour-row {
-    border-bottom: 1px solid black;
-    padding-bottom: 1em;
-    margin-bottom: 1em;
+
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
 }
 
-.tour-row:last-child {
-    border: none;
+/*Shop elements*/
+.shop-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
 }
-
-.tour-item {
-    display: inline-block;
-    padding-right: .5em;
-}
-
-.tour-date {
-    color: #555;
-    width: 11%;
-    font-weight: bold;
-}
-
-.tour-city {
-    width: 24%;
-}
-
-.tour-arena {
-    width: 42%;
-}
-
-.tour-btn {
-    max-width: 19%;
-}
-
 .shop-item {
     margin: 30px;
 }
@@ -201,7 +111,6 @@ html, body {
     width: 100%;
     text-align: center;
     font-weight: bold;
-    font-size: 1.5em;
     color: #333;
     margin-bottom: 15px;
 }
@@ -221,15 +130,10 @@ html, body {
     color: #333;
 }
 
-.shop-items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
+/*Cart elements*/
 
 .cart-header {
     font-weight: bold;
-    font-size: 1.25em;
     color: #333;
 }
 
@@ -272,17 +176,6 @@ html, body {
     border-radius: 10px;
 }
 
-.btn-danger {
-    color: white;
-    background-color: #EB5757;
-    border: none;
-    border-radius: .3em;
-    font-weight: bold;
-}
-
-.btn-danger:hover {
-    background-color: #CC4C4C;
-}
 
 .cart-quantity-input {
     height: 34px;
@@ -321,10 +214,4 @@ html, body {
 .cart-total-price {
     color: #333;
     font-size: 1.1em;
-}
-
-.btn-purchase {
-    display: block;
-    margin: 40px auto 80px auto;
-    font-size: 1.75em;
 }
