--- a/fruit-basket.css
+++ b/fruit-basket.css
@@ -77,7 +77,7 @@ body, html {
   
 .button:hover {opacity: 1}
 
-.btn-danger {
+.remove-button {
     color: white;
     background-color: #EB5757;
     border: none;
@@ -85,12 +85,12 @@ body, html {
     font-weight: bold;
 }
 
-.btn-danger:hover {
+.remove-button:hover {
     background-color: #CC4C4C;
 }
 
 
-.btn-purchase {
+.purchase-button {
     display: block;
     margin: 40px auto 80px auto;
     font-size: 1.75em;
